client/src/app/match-making/match-making.module.scss
.body {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	margin-top: 10vh;

	form {
		width: 25vh;
		display: flex;
		flex-direction: column;
		align-items: center;
	}

	input {
		width: 25vh;
		text-align: center;
		border-radius: 0.5vh;
		border: 0.3vh solid var(--gray-900);
		height: 5vh;
		font-size: 2vh;
	}
}

.codeInput {
	display: flex;
	justify-content: center;
	gap: 1vh;
}

.privateLobbyMenu {
	align-items: center;
	justify-content: center;
  color: white;
  font-size: 2.5vh;
	display: flex;
	flex-direction: column;
}

.privateLobby {
	align-items: center;
	padding: 30px;
	justify-content: center;
  color: white;
  font-size: 2.5vh;
  display: flex;
  flex-direction: column;
  gap: 15px;

	text-shadow: 0.1vh 0.1vh 0.2vh black, -0.1vh -0.1vh 0.2vh black;
	background: hsla(0deg, 0%, 0%, 55%);
	border-radius: 0.5vh;
	padding: 2vh 2vh;

	@media (orientation: portrait) {
  	max-width: 80%;
	}
	@media (orientation: landscape) {
  	max-width: 65vh;
	}
}

.privateJoinGrid {
	display: flex;
	@media (orientation: portrait) {
    	flex-direction: column;
      gap: 15px;
	}
	@media (orientation: landscape) {
    	flex-direction: row;
      gap: 30px;
	}
}

.privateLobbyLeft {
	display: flex;
	flex-direction: column;
	flex-grow: 1;

	p,
	label {
		color: white;
		font-size: 2.5vh;
		user-select: none;
	}
}

.privateLobbyRight {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}

.joinButton {
	display: flex;
	flex-direction: row;
  align-items: stretch;
  height: 5vh;

	input {
    font-size: 2.5vh;
    font-weight: bold;
    height: unset;
	}

	button {
    height: unset;
	}
}

.code {
	user-select: text;
	background: var(--gray-700);
	color: white;
	border: 0.5vh solid var(--gray-900);
	border-radius: 0.5vh;
	padding: 0 2vh;
	height: 6vh;
	line-height: 6vh;
	font-size: 3vh;
	letter-spacing: 0.2vh;
	cursor: pointer;
}

.options {
	width: 100%;
	display: flex;
	justify-content: space-around;
	margin-top: 1vh;
}

.invalidCode {
	border: 0.5vh solid var(--color-error) !important;
}

@keyframes fadeIn {
	from {
		opacity: 0;
	}

	to {
		opacity: 1;
	}
}

